// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders disabled toggle button 1`] = `
<View
  collapsable={false}
  style={
    [
      {
        "margin": 6,
        "overflow": "hidden",
      },
      {
        "backgroundColor": undefined,
        "height": 40,
        "width": 40,
      },
      {
        "borderColor": "rgba(202, 196, 208, 1)",
        "borderRadius": 20,
        "borderWidth": 0,
      },
      {
        "height": 42,
        "margin": 0,
        "width": 42,
      },
      {
        "backgroundColor": "rgba(230, 224, 233, 1)",
        "borderColor": "rgba(121, 116, 126, 1)",
        "borderRadius": 4,
      },
      undefined,
    ]
  }
  testID="icon-button-container"
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": true,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    centered={true}
    collapsable={false}
    focusable={true}
    hitSlop={
      {
        "bottom": 6,
        "left": 6,
        "right": 6,
        "top": 6,
      }
    }
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    role="button"
    style={
      [
        false,
        [
          {
            "alignItems": "center",
            "flexGrow": 1,
            "justifyContent": "center",
          },
          undefined,
        ],
      ]
    }
    testID="icon-button"
  >
    <View
      style={
        {
          "opacity": 0.38,
        }
      }
    >
      <Text
        accessibilityElementsHidden={true}
        importantForAccessibility="no-hide-descendants"
        pointerEvents="none"
        selectable={false}
        style={
          [
            {
              "color": "rgba(29, 27, 32, 1)",
              "fontSize": 24,
            },
            [
              {
                "lineHeight": 24,
                "transform": [
                  {
                    "scaleX": 1,
                  },
                ],
              },
              {
                "backgroundColor": "transparent",
              },
            ],
          ]
        }
      >
        heart
      </Text>
    </View>
  </View>
</View>
`;

exports[`renders toggle button 1`] = `
<View
  collapsable={false}
  style={
    [
      {
        "margin": 6,
        "overflow": "hidden",
      },
      {
        "backgroundColor": undefined,
        "height": 40,
        "width": 40,
      },
      {
        "borderColor": "rgba(202, 196, 208, 1)",
        "borderRadius": 20,
        "borderWidth": 0,
      },
      {
        "height": 42,
        "margin": 0,
        "width": 42,
      },
      {
        "backgroundColor": "rgba(230, 224, 233, 1)",
        "borderColor": "rgba(121, 116, 126, 1)",
        "borderRadius": 4,
      },
      undefined,
    ]
  }
  testID="icon-button-container"
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": true,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    centered={true}
    collapsable={false}
    focusable={true}
    hitSlop={
      {
        "bottom": 6,
        "left": 6,
        "right": 6,
        "top": 6,
      }
    }
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    role="button"
    style={
      [
        false,
        [
          {
            "alignItems": "center",
            "flexGrow": 1,
            "justifyContent": "center",
          },
          undefined,
        ],
      ]
    }
    testID="icon-button"
  >
    <View
      style={
        {
          "opacity": 1,
        }
      }
    >
      <Text
        accessibilityElementsHidden={true}
        importantForAccessibility="no-hide-descendants"
        pointerEvents="none"
        selectable={false}
        style={
          [
            {
              "color": "rgba(73, 69, 79, 1)",
              "fontSize": 24,
            },
            [
              {
                "lineHeight": 24,
                "transform": [
                  {
                    "scaleX": 1,
                  },
                ],
              },
              {
                "backgroundColor": "transparent",
              },
            ],
          ]
        }
      >
        heart
      </Text>
    </View>
  </View>
</View>
`;

exports[`renders unchecked toggle button 1`] = `
<View
  collapsable={false}
  style={
    [
      {
        "margin": 6,
        "overflow": "hidden",
      },
      {
        "backgroundColor": undefined,
        "height": 40,
        "width": 40,
      },
      {
        "borderColor": "rgba(202, 196, 208, 1)",
        "borderRadius": 20,
        "borderWidth": 0,
      },
      {
        "height": 42,
        "margin": 0,
        "width": 42,
      },
      {
        "backgroundColor": "rgba(243, 237, 247, 1)",
        "borderColor": "rgba(121, 116, 126, 1)",
        "borderRadius": 4,
      },
      undefined,
    ]
  }
  testID="icon-button-container"
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": false,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    centered={true}
    collapsable={false}
    focusable={true}
    hitSlop={
      {
        "bottom": 6,
        "left": 6,
        "right": 6,
        "top": 6,
      }
    }
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    role="button"
    style={
      [
        false,
        [
          {
            "alignItems": "center",
            "flexGrow": 1,
            "justifyContent": "center",
          },
          undefined,
        ],
      ]
    }
    testID="icon-button"
  >
    <View
      style={
        {
          "opacity": 0.38,
        }
      }
    >
      <Text
        accessibilityElementsHidden={true}
        importantForAccessibility="no-hide-descendants"
        pointerEvents="none"
        selectable={false}
        style={
          [
            {
              "color": "rgba(29, 27, 32, 1)",
              "fontSize": 24,
            },
            [
              {
                "lineHeight": 24,
                "transform": [
                  {
                    "scaleX": 1,
                  },
                ],
              },
              {
                "backgroundColor": "transparent",
              },
            ],
          ]
        }
      >
        heart
      </Text>
    </View>
  </View>
</View>
`;
